--- a/Heaventure/Content/Site.css
+++ b/Heaventure/Content/Site.css
@@ -22,3 +22,15 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.img-responsive {
+    max-height: 100%;
+}
+
+.mt-lg {
+    margin-top: 3rem;
+}
+
+.mt-0 {
+    margin-top: 0;  
+}
