--- a/Heaventure/Views/Home/Index.cshtml
+++ b/Heaventure/Views/Home/Index.cshtml
@@ -1,31 +1,25 @@
-﻿@{
+﻿@model List<Heaventure.Data.Constellation>
+@{
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<div class="row mt-lg">
+    @foreach (var constellation in Model)
+    {
+        <div class="col-md-4">
+            <div class="panel panel-default">
+                <div class="panel-body panel-img-container">
+                    <a href="@Url.Action("Details", new { Id = constellation.Id })">
+                        <img src="@Url.Content(constellation.ImageUrl)" class="img-responsive" />
+                    </a>
+                </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+                <div class="panel-footer">
+                    <h3 class="panel-title text-center">
+                        @Html.ActionLink(constellation.Name, "Details", new { Id = constellation.Id })
+                    </h3>
+                </div>
+            </div>
+        </div>
+    }
 </div>
