--- a/Heaventure/Views/Shared/_Layout.cshtml
+++ b/Heaventure/Views/Shared/_Layout.cshtml
@@ -16,11 +16,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Heaventure", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink(Resources.AppName, "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink(Resources.Home, "Index", "Home")</li>
                 </ul>
 
                 @Html.Partial("_CultureSwitcher")
@@ -32,8 +32,11 @@
         <hr />
         <footer>
             <p class="text-center">
-                Built with ASP.NET MVC &amp; Bootstrap.
-                Constellation descriptions &amp; images are from <a href="https://www.wikipedia.org/">Wikipedia.</a>
+                @Html.Raw(@String.Format(
+                    Resources.FooterMessage,
+                    "ASP.NET MVC",
+                    "Bootstrap",
+                    "https://www.wikipedia.org"))
             </p>
         </footer>
     </div>
