Adding SmartFormat package and using it for localized plural strings

--- a/Heaventure/Views/Home/Details.cshtml
+++ b/Heaventure/Views/Home/Details.cshtml
@@ -15,14 +15,8 @@
 
         <p>@Model.Description</p>
 
-        <dl class="dl-horizontal">
-            <dt>Number of Stars</dt>
+        <p><strong>@Smart.Format(Resources.StarCount, Model.StarCount)</strong></p>
 
-            <dd>@Model.StarCount</dd>
-
-            <dt>Added</dt>
-
-            <dd>@Model.CreatedAt</dd>
-        </dl>
+        <p>@Model.CreatedAt</p>
     </div>
 </div>
