--- a/Heaventure/Views/Shared/_Layout.cshtml
+++ b/Heaventure/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
         <hr />
         <footer>
             <p class="text-center">
-                @Html.Raw(@String.Format(
+                @Html.Raw(Smart.Format(
                     Resources.FooterMessage,
                     "ASP.NET MVC",
                     "Bootstrap",
