Adding formatted date string

--- a/Heaventure/Views/Home/Details.cshtml
+++ b/Heaventure/Views/Home/Details.cshtml
@@ -17,6 +17,6 @@
 
         <p><strong>@Smart.Format(Resources.StarCount, Model.StarCount)</strong></p>
 
-        <p>@Model.CreatedAt</p>
+        <p class="small">@Model.CreatedAt.ToString("f")</p>
     </div>
 </div>
