Added Arabic constellation date for presentation. Minor localization fixes.

--- a/Heaventure/Views/Home/Index.cshtml
+++ b/Heaventure/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<Heaventure.Data.Constellation>
 @{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = Resources.Home;
 }
 
 <div class="row mt-lg">
